--- a/styles.css
+++ b/styles.css
@@ -106,18 +106,27 @@
   width: 500px;
   height: 715px;
   position: relative;
+  position: relative;
 }
 
 .guestFav {
   width: 124px;
   height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 20px;
   background-color: #dddddd;
-  border: 3px solid white;
+  border: 1px solid grey;
+  position: absolute;
+  margin-left: 50px;
+  margin-top: 50px;
+  text-align: center;
+  font-weight: 500;
+  box-shadow: 0 5px 15px 0 #7a7878;
 }
 
 .guestTxt {
-  margin: 10px 11px 11px 8px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   white-space: nowrap;
@@ -158,4 +167,17 @@
   display: inline-block;
   vertical-align: middle;
   margin-left: 285px;
+}
+
+.price {
+  text-decoration: underline;
+}
+
+.heartIcon {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 50px;
+  position: absolute;
+  right: 0;
+  top: 50px;
 }
