--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
   border-color: rgb(175, 178, 182);
 }
 
-.filterIcon {
+.filterBtn {
   width: 16px;
   height: 16px;
   margin: 12px 12px 12px 12px;
@@ -68,7 +68,6 @@
 .iconCarousel {
   width: 500px;
   height: 74px;
-
   margin-top: 74px;
   position: absolute;
   z-index: 2; /* Increased z-index to make it appear on top */
@@ -77,7 +76,6 @@
 .iconPositioning {
   width: 100%;
   height: 43px;
-
   justify-content: space-between;
   display: flex;
 }
@@ -104,8 +102,7 @@
 
 .cardSection {
   width: 500px;
-  height: 715px;
-  position: relative;
+  height: 580px;
   position: relative;
 }
 
