--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,34 @@
 .nav {
-  width: 500px;
-  height: 144px;
-  position: relative;
+  max-width: 100%;
+  height: 145px;
+  z-index: 1;
+  background-color: #ffff;
+  box-shadow: 2px 2px 2px 1px #e6e4e4;
 }
 
 .navSearchBar {
-  width: 398px;
+  display: flex;
+  position: absolute;
+  width: 425px;
   height: 54px;
   margin: 15px 73px 74px 25px;
   border-radius: 30px;
   border: 1px #ffff;
   border-color: rgb(186, 181, 181);
-
-  position: absolute;
   box-shadow: 0 5px 15px 0 #e6e4e4;
 }
 
-.navSvg {
+.searchBarIcon {
   position: absolute;
   margin: 17px 370px 17px 19px;
 }
 
 .searchText1 {
-  float: right;
   margin: 10px 4px 26px 58px;
-  width: 339px;
+  width: 341px;
   height: 20px;
   font-size: 14px;
-  line-height: 20px;
-  text-align: start;
-  letter-spacing: normal;
+  line-height: 20.02px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
@@ -37,13 +36,12 @@
 
 .searchText2 {
   width: 341px;
-  height: 36px;
+  height: 20px;
+  padding-left: 5px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 12px;
   line-height: 20.02px;
-  text-align: start;
-  letter-spacing: normal;
   position: absolute;
   margin: 30px 4px 10px 54px;
   font-weight: 200;
@@ -55,11 +53,12 @@
   border: 1px solid;
   border-radius: 50%;
   float: right;
-  margin: 22px 24px 8px 11px;
+  margin: 22px 15px 8px 11px;
   border-color: rgb(175, 178, 182);
 }
 
 .filterBtn {
+  position: relative;
   width: 16px;
   height: 16px;
   margin: 12px 12px 12px 12px;
@@ -67,43 +66,60 @@
 
 .iconCarousel {
   width: 500px;
-  height: 74px;
-  margin-top: 74px;
-  position: absolute;
-  z-index: 2; /* Increased z-index to make it appear on top */
+  height: 80px;
+  margin-top: 65px;
+  margin-left: 20px;
+  z-index: 2;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.iconCarousel::-webkit-scrollbar {
+  height: 0;
 }
 
 .iconPositioning {
-  width: 100%;
-  height: 43px;
-  justify-content: space-between;
   display: flex;
+  width: 800px;
+  height: 80px;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1px;
 }
 
-.navIcon {
-  width: 50px;
-  height: 50px;
-  margin-top: 20px;
-  align-self: center;
+.iconTxtContainer {
+  display: flex;
   text-align: center;
+  width: auto;
 }
 
 .iconTxt {
+  flex: 1;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 12px;
   line-height: 20.02px;
   text-align: center;
   letter-spacing: normal;
-
   white-space: nowrap;
   margin-top: 5px;
 }
 
+.iconTxtContainer:hover {
+  border-bottom: 3px solid black;
+  width: auto;
+}
+
 .cardSection {
-  width: 500px;
-  height: 580px;
+  width: 600px;
+  height: 600px;
   position: relative;
+}
+
+.guestBtn {
+  display: flex;
+  justify-content: start;
 }
 
 .guestFav {
@@ -131,39 +147,49 @@
 }
 
 .imgSize {
-  width: 452px;
+  width: 500px;
   height: 452px;
   border-radius: 10px;
   margin: 24px 24px 0 24px;
 }
 
+.descriptionContainer {
+  width: 500px;
+  height: 120px;
+  margin-left: 24px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .propertyInfo {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: fit-content;
   font-size: 14px;
   font-weight: 300;
-  text-align: start;
-  letter-spacing: normal;
   line-height: 20.02px;
-  margin-left: 24px;
   float: left;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.starRateContainer {
+  display: flex;
+  width: auto;
+  height: 20px;
+  margin-top: 15px;
 }
 
 .ratings {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-top: 5px;
-  margin-right: 24px;
-  float: right;
   font-weight: 300;
   font-size: 14px;
+  width: auto;
 }
 
 .starIcon {
-  margin-top: 5px;
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 285px;
+  width: 10px;
+  height: 10px;
+  align-self: center;
 }
 
 .price {
@@ -172,9 +198,8 @@
 
 .heartIcon {
   display: flex;
-  justify-content: flex-end;
   margin-right: 50px;
   position: absolute;
-  right: 0;
+  right: 50px;
   top: 50px;
 }
