--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 .nav {
   max-width: 100%;
   height: 145px;
-  z-index: 1;
   background-color: #ffff;
   box-shadow: 2px 2px 2px 1px #e6e4e4;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  padding: 15px;
 }
 
 .navSearchBar {
@@ -66,7 +69,7 @@
 
 .iconCarousel {
   width: 500px;
-  height: 80px;
+  height: 88px;
   margin-top: 65px;
   margin-left: 20px;
   z-index: 2;
@@ -82,7 +85,7 @@
 .iconPositioning {
   display: flex;
   width: 800px;
-  height: 80px;
+  height: 88px;
   justify-content: space-between;
   align-items: center;
   margin-top: 1px;
@@ -92,6 +95,8 @@
   display: flex;
   text-align: center;
   width: auto;
+  height: 88px;
+  padding-top: 44px;
 }
 
 .iconTxt {
