--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@
 
 /* ----------------------------------- Nav section ends here -----------------------------------*/
 
-.popUpMenuContainer1 {
+/*.popUpMenuContainer1 {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -198,7 +198,7 @@
   text-align: center;
   letter-spacing: normal;
 }
-
+*/
 /* ----------------------------------- popUpMenu section ends here -----------------------------------*/
 
 .cardSection {
@@ -280,6 +280,7 @@
   width: 10px;
   height: 10px;
   align-self: center;
+  margin-right: 5px;
 }
 
 .price {
@@ -295,3 +296,118 @@
 }
 
 /* ----------------------------------- Property Card section ends here -----------------------------------*/
+
+.showMoreFullContainer {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 150px;
+  margin-bottom: 30px;
+  border-top: 1px solid rgb(183, 183, 183);
+  margin-top: 20px;
+  padding-top: 20px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.textContainer {
+  height: 30px;
+  width: 100%;
+  justify-content: center;
+  align-items: flex-start;
+  display: flex;
+  position: absolute;
+  margin-top: 25px;
+}
+
+.showMoreTxt {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.showMoreBtnContainer {
+  width: 100%;
+  height: 74px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  margin-top: 45px;
+}
+
+.showMoreBtn {
+  background-color: black;
+  border-radius: 10px;
+  width: 133px;
+  height: 48px;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+/* ----------------------------------- Show More section ends here -----------------------------------*/
+
+.footerContainer {
+  width: 100%;
+  height: 915px;
+  border: 1px solid red;
+}
+
+.footerHeader {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.supportInfo {
+  width: 100%;
+  margin: 0 auto;
+  border-top: 1px solid rgb(183, 183, 183);
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+.hostingInfo {
+  width: 90%;
+  margin: 0 auto;
+  border-top: 1px solid rgb(183, 183, 183);
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+.airBnbInfo {
+  width: 90%;
+  margin: 0 auto;
+  border-top: 1px solid rgb(183, 183, 183);
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+.siteInfo {
+  width: 90%;
+  margin: 0 auto;
+  border-top: 1px solid rgb(183, 183, 183);
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+.footerList {
+  display: grid;
+}
+
+ul {
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 200;
+  line-height: 20.02px;
+  letter-spacing: normal;
+}
