--- a/styles.css
+++ b/styles.css
@@ -8,28 +8,26 @@ body {
   overflow-x: hidden;
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-direction: column;
   width: 41em;
   height: auto;
 }
 
-.pageContainer {
-  position: relative;
-  max-width: 150vw;
+body::-webkit-scrollbar-track {
+  background: transparent;
 }
 
 /* ----------------------------------- NavBar section starts here -----------------------------------*/
 
 .nav {
+  position: sticky;
+  display: flex;
+  top: 0;
+  z-index: 100;
   width: 30rem;
   height: 115px;
+  padding: 15px;
   background-color: #ffff;
   box-shadow: 2px 2px 2px 1px #e6e4e4;
-  position: sticky;
-  z-index: 100;
-  padding: 15px;
-  top: 0;
 }
 
 .navSearchBar {
@@ -64,13 +62,13 @@ body {
   width: 12em;
   height: 20px;
   padding-left: 5px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 12px;
+  font-weight: 200;
   line-height: 2.002em;
   position: absolute;
   margin: 30px 4px 10px 54px;
-  font-weight: 200;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .navFilterBtn {
@@ -129,14 +127,11 @@ body {
 
 .iconTxt {
   flex: 1;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 12px;
-  line-height: 2.002em;
-  text-align: center;
-  letter-spacing: normal;
-  white-space: nowrap;
   margin-top: 5px;
+  text-align: center;
+  white-space: nowrap;
+  font: 12px/2.002em system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .iconTxtContainer:hover {
@@ -149,12 +144,12 @@ body {
 .popUpMenuContainer1 {
   position: fixed;
   left: 0;
-  width: 510px;
-  height: 112px;
+  width: 100%;
+  height: 13.5vh;
   z-index: 100;
   box-shadow: 0 1px 1px 0 #e6e4e4;
   background-color: #f7f7f7;
-  bottom: 0;
+  bottom: 1vh;
 }
 
 .learnAboutContainer {
@@ -172,16 +167,13 @@ body {
 }
 
 .learnTxt {
+  position: absolute;
   width: auto;
   margin-top: 15px;
-  position: absolute;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 12px;
-  line-height: 2.002em;
-  text-align: center;
-  letter-spacing: normal;
   font-weight: 450;
+  text-align: center;
+  font: 12px/2.002em system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .popUpMenuContainer2 {
@@ -189,10 +181,10 @@ body {
   position: relative;
   width: 100%;
   height: 11vh;
+  color: #717171;
   background-color: #ffff;
   border-top: 1px solid rgb(231, 231, 231);
   box-shadow: 0 1px 1px 0 #e6e4e4;
-  color: #717171;
 }
 
 .iconTxtContainer2 {
@@ -216,23 +208,23 @@ body {
 }
 
 .accountTxt {
+  max-width: 100%;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 100%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 12px;
-  line-height: 2.002em;
   text-align: center;
-  letter-spacing: normal;
+  font: 12px/2.002em system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /* ----------------------------------- PropertyCard section starts here -----------------------------------*/
 
-.gridContainer {
-  margin-left: 25px;
+.cardContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 29.5em;
 }
 
 .cardSection {
@@ -240,7 +232,7 @@ body {
   height: auto;
   margin-top: 1em;
   position: relative;
-  margin-bottom: 3em;
+  margin-bottom: 1em;
 }
 
 .cardSection:hover {
@@ -248,24 +240,25 @@ body {
 }
 
 .imgContainer {
-  max-width: 28em;
+  max-width: 100%;
   max-height: auto;
+  padding-left: 1em;
+  width: 30em;
 }
 
 .imgSize {
   max-width: 100%;
-  height: 63vh;
+  height: 50.5vh;
   border-radius: 10px;
   object-fit: cover;
 }
 
 .guestBtn {
   position: absolute;
-  left: 1em;
+  left: 2em;
   top: 10px;
   width: 130px;
   height: 35px;
-  margin-left: 10px;
   margin-top: 5px;
 }
 
@@ -284,16 +277,16 @@ body {
 }
 
 .guestTxt {
+  font-size: 14px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   white-space: nowrap;
-  font-size: 14px;
 }
 
 .descriptionContainer {
-  width: 97%;
+  width: 94%;
   height: 12vh;
-  margin-left: 0;
+  margin-left: 2em;
   display: flex;
   justify-content: space-between;
 }
@@ -302,7 +295,6 @@ body {
   font-size: 14px;
   font-weight: 300;
   line-height: 20.02px;
-
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -316,19 +308,19 @@ body {
 }
 
 .ratings {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 300;
   font-size: 14px;
   width: auto;
   align-self: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .starIcon {
   width: 10px;
   height: 10px;
-  align-self: center;
   margin-right: 5px;
+  align-self: center;
 }
 
 .price {
@@ -338,57 +330,58 @@ body {
 .heartIconContainer {
   position: absolute;
   top: 1em;
-  right: 2em;
+  right: 0.5em;
 }
 
-/* ----------------------------------- Show more section start here -----------------------------------*/
+/* ----------------------------------- Show more section starts here -----------------------------------*/
 
 .showMoreFullContainer {
   position: relative;
-  height: 23vh;
-  border-top: 1px solid rgb(183, 183, 183);
-  width: 28em; /*was 28em*/
-  margin-left: 25px; /*was 35px*/
   justify-content: center;
+  height: 20vh;
+  border-top: 1px solid rgb(183, 183, 183);
+  width: 28em;
+  margin-left: 25px;
+  margin-top: 1em;
 }
 
-.textContainer {
-  height: 30px;
+.txtContainer {
   width: 100%;
+  height: 30px;
+  margin-top: 3em;
   justify-content: center;
   align-items: flex-start;
   display: flex;
   position: absolute;
-  margin-top: 25px;
 }
 
 .showMoreTxt {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   font-size: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .showMoreBtnContainer {
   width: 100%;
   height: 74px;
+  margin-top: 4em;
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  margin-top: 45px;
 }
 
 .showMoreBtn {
-  background-color: black;
-  border-radius: 10px;
-  border: none;
   width: 133px;
   height: 48px;
-  color: white;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  border-radius: 10px;
   font-weight: 400;
   font-size: 16px;
+  border: none;
+  color: white;
+  background-color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .showMoreBtn:hover {
@@ -399,26 +392,26 @@ body {
 /* ----------------------------------- Footer section starts here -----------------------------------*/
 
 .footerContainer {
-  width: 77%;
+  width: 36em;
+  height: 61em;
+  font-size: 14px;
   margin-left: 0;
-  height: 915px;
   border-top: 1px solid rgb(183, 183, 183);
   background-color: #f7f7f7;
-  font-size: 14px;
 }
 
 .supportInfo {
-  margin-top: 5px;
-  padding-top: 20px;
-  margin-left: 25px;
+  margin-top: 0.3125em;
+  padding-top: 1.25em;
+  margin-left: 1.75em;
 }
 
 .footerHeader {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
   font-size: 14px;
   margin-bottom: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .hostingInfo,
@@ -426,19 +419,19 @@ body {
 .siteInfo {
   width: 90%;
   margin: 0 auto;
-  border-top: 1px solid rgb(183, 183, 183);
   margin-top: 20px;
   padding-top: 20px;
+  border-top: 1px solid rgb(183, 183, 183);
 }
 
 .siteInfo {
   height: 230px;
-  background-color: #f7f7f7;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 300;
   line-height: 2.002em;
+  background-color: #f7f7f7;
   letter-spacing: normal;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .siteInfoContainer {
@@ -468,13 +461,12 @@ body {
 }
 
 ul {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 0;
   font-weight: 300;
   line-height: 2.002em;
-  letter-spacing: normal;
   list-style-type: none;
-  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 li {
